10.12.2 (Jun XX, 2020)
 - Updated client.ready() function to be consumed on demand and return a promise reflecting the current status of the SDK at the time the method was invoked.

10.12.1 (May 18, 2020)
 - Updated logging messages for streaming notifications to DEBUG log level.
 - Updated asynchronous logic handling to avoid async/await syntax in order to remove regenerator-runtime dependency.
 - Removed axios HTTP library in favor of fetch for browsers (with XHR as fallback) and node-fetch for Node JS.

10.12.0 (April 30, 2020)
 - Added support for the new Split streaming architecture. When enabled, the SDK will not poll for updates but instead receive notifications every time there's a change in your environments,
  allowing to process those much quicker. If disabled (default) or in the event of an issue, the SDK will fallback to the known polling mechanism to provide a seamless experience.

10.11.1 (Mar 19, 2020)
 - Updated @babel/runtime-corejs3, @types/node and several dev dependencies.
 - Updated the name of the "events" config of GOOGLE_ANALYTICS_TO_SPLIT integration to "hits".

10.11.0 (Mar 13, 2020)
 - Added integrations property to configuration which could receive a list of valid integrations.
 - Added support of inbound and outbound SDK to SDK integrations for Google Analytics. Read more in our documentation's integrations section.
 - Updated logging logic to avoid calling console.error in the client side.
 - Updated logging error messages priority to significantly reduce the amount of error level logs that can't be silenced.
 - Updated axios to 0.19.2 and few other minor updates on dev dependencies.
 - Updated default metricsRefreshRate from 60s to 120s and reduced the log level from ERROR to INFO for telemetry post failures.
 - Bugfixing - Emit SDK_UPDATE in localhost only when mock was actually updated.

10.10.0 (Jan 10, 2020)