@@ -25,6 +25,19 @@ const NodeStorageFactory = context => {
       const redis = new RedisAdapter(storage.options);
       const meta = MetaBuilder(settings);
 
+      // subscription to Redis connect event to emit SDK_READY
+      const readinessP = context.get(context.constants.READINESS);
+      readinessP.then(readiness => {
+        redis.on('connect', () => {
+          // @TODO check if running sync or not
+          // setTimeout(() => { // Allow for the sync statements to run so client is returned before these are emitted and callbacks executed.
+          const { splits, segments } = readiness;
+          splits.emit(splits.SDK_SPLITS_ARRIVED, false);
+          segments.emit(segments.SDK_SEGMENTS_ARRIVED, false);
+          // }, 0);
+        });
+      });
+
       return {
         splits: new SplitCacheInRedis(keys, redis),
         segments: new SegmentCacheInRedis(keys, redis),
